--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "@babel/core": "^7.17.9",
     "@babel/node": "^7.16.8",
     "@babel/preset-env": "^7.16.11",
+    "borje-brorson": "file:..",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "mongoose": "^6.3.5",
