--- a/package.json
+++ b/package.json
@@ -1,7 +1,13 @@
 {
-  "name": "project-auth-parent",
+  "name": "borje-brorson",
   "version": "1.0.0",
   "scripts": {
     "postinstall": "npm install --prefix backend"
+  },
+  "dependencies": {
+    "react": "^18.1.0",
+    "react-dom": "^18.1.0",
+    "react-router-dom": "^6.3.0",
+    "react-scripts": "^5.0.1"
   }
 }
