--- a/.gitignore
+++ b/.gitignore
@@ -15,15 +15,15 @@ yarn-error.log*
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/frontend/node_modules
-/frontend/.pnp
-/frontend/.pnp.js
+/front-end/node_modules
+/front-end/.pnp
+/front-end/.pnp.js
 
 # testing
-/frontend/coverage
+/front-end/coverage
 
 # production
-/frontend/build
+/front-end/build
 
 
 
