--- a/netlify.toml
+++ b/netlify.toml
@@ -4,4 +4,8 @@
   base = "front-end/"
   publish = "build/"
   command = "npm run build"
+   [[redirects]]
+  from = "/*"
+  to = "/"
+  status = 200
 
