--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
   },
   "dependencies": {
     "react": "^18.1.0",
+    "react-cookie-consent": "^7.5.0",
     "react-dom": "^18.1.0",
+    "react-popup-alert": "^2.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^9.0.5",
     "styled-components": "^5.3.5"
   }
 }
