--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "react": "^18.1.0",
     "react-cookie-consent": "^7.5.0",
     "react-dom": "^18.1.0",
+    "react-mailto": "^0.4.0",
     "react-popup-alert": "^2.0.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.1",
