--- a/front-end/package.json
+++ b/front-end/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "cookieconsent": "^3.1.1",
     "cra-template": "1.2.0",
     "moment": "^2.29.3",
     "react": "^18.1.0",
+    "react-cookie-consent": "^7.5.0",
     "react-dom": "^18.1.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
