--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "postinstall": "npm install --prefix backend"
   },
   "dependencies": {
+    "cookieconsent": "^3.1.1",
     "react": "^18.1.0",
     "react-cookie-consent": "^7.5.0",
     "react-dom": "^18.1.0",
